MOdified for the new issue

--- a/about.html
+++ b/about.html
@@ -22,13 +22,13 @@
     <header class="about-hero">
       <h1 class="about-title" data-i18n="about_heading">ಪತ್ರಿಕೆಯ ಪರಿಚಯ</h1>
       <p class="about-subtitle" data-i18n="about_tagline">
-        ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ગુણಮಟ್ಟದ ಸಂಶೋಧನೆಗಾಗಿ ಸಮರ್ಪಿತ ವೇದಿಕೆ.
+        ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಗುಣಮಟ್ಟದ ಸಂಶೋಧನೆಗಾಗಿ ಸಮರ್ಪಿತ ವೇದಿಕೆ.
       </p>
 
       <div class="about-chips">
-        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_bimonthly">ದ್ವೈಮಾಸಿಕ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_monthly">ಮಾಸಿಕ</span></span>
         <span class="chip"><span class="dot"></span><span data-i18n="about_chip_scope">ಬಹುಶಿಸ್ತೀಯ</span></span>
-        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_review">ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_review_issn">ಪಿಯರ್-ರಿವ್ಯೂಡ್ • ISSN</span></span>
       </div>
 
       <div class="about-cta">
@@ -37,60 +37,46 @@
       </div>
     </header>
 
-    <!-- MISSION & SCOPE -->
+    <!-- JOURNAL VISION -->
     <section class="about-card">
-      <h2 data-i18n="about_mission_h">ನಮ್ಮ ಮಿಷನ್</h2>
-      <p data-i18n="about_mission_p">
-        ಕನ್ನಡ ಅಧ್ಯಯನ, ಸಾಹಿತ್ಯ, ಮತ್ತು ಸಂಸ್ಕೃತಿ ಕ್ಷೇತ್ರಗಳಲ್ಲಿ ಗುಣಮಟ್ಟದ ಸಂಶೋಧನೆಗಳಿಗೆ ವೇದಿಕೆ ಒದಗಿಸುವುದು ನಮ್ಮ ಉದ್ದೇಶ. ವಿಮರ್ಶಾತ್ಮಕ ಚರ್ಚೆಗಳು ಹಾಗೂ ಹೊಸ ಆದರ್ಶಗಳನ್ನು ಉತ್ತೇಜಿಸುವುದು ನಮ್ಮ ಧ್ಯೇಯ.
-      </p>
-
-      <div class="about-grid">
-        <div>
-          <h3 data-i18n="about_scope_h">ವ್ಯಾಪ್ತಿ (Scope)</h3>
-          <ul class="about-list">
-            <li data-i18n="about_scope_li1">ಕನ್ನಡ ಭಾಷಾಶಾಸ್ತ್ರ, ಸಾಹಿತ್ಯ, ಜನಪದ, ಸಂಸ್ಕೃತಿ ಅಧ್ಯಯನ.</li>
-            <li data-i18n="about_scope_li2">ಅನುಸಂಧಾನದ ಅಂತರಶಿಸ್ತೀಯ ಅಧ್ಯಯನಗಳು.</li>
-            <li data-i18n="about_scope_li3">ಪುಸ್ತಕ ವಿಮರ್ಶೆ, ಸಂವಾದ, ಕ್ಷೇತ್ರ ವರದಿಗಳು.</li>
-          </ul>
-        </div>
-        <div>
-          <h3 data-i18n="about_values_h">ಮೌಲ್ಯಗಳು (Values)</h3>
-          <ul class="about-list">
-            <li data-i18n="about_values_li1">ನೈತಿಕತೆ ಮತ್ತು ಮೂಲತ್ವ.</li>
-            <li data-i18n="about_values_li2">ಶೈಕ್ಷಣಿಕ ದೃಢತೆ ಮತ್ತು ಸ್ಪಷ್ಟತೆ.</li>
-            <li data-i18n="about_values_li3">ಮುಕ್ತ ಚರ್ಚೆ ಮತ್ತು ವೈವಿಧ್ಯ.</li>
-          </ul>
-        </div>
+      <h2 data-i18n="about_vision_h">ನಮ್ಮ ಬಗ್ಗೆ / ಪತ್ರಿಕೆಯ ಆಶಯ</h2>
+      <ul class="about-list">
+        <li data-i18n="about_v1">ಭಾರತೀಯ ಭಾಷಾ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯನ್ನು ಅರ್ಥೈಸಿಕೊಳ್ಳುವುದು.</li>
+        <li data-i18n="about_v2">ಭಾರತೀಯ ಭಾಷೆಗಳ ಸಾಹಿತ್ಯವನ್ನು ಒಳಗೊಂಡಂತೆ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ತಾತ್ವಿಕ ಚಿಂತನೆಗಳನ್ನು ಕನ್ನಡ ಸಾಹಿತ್ಯದ ಮೂಲಕ ಪರಿಚಯಿಸುವುದು.</li>
+        <li data-i18n="about_v3">ಸಾಹಿತ್ಯವು ಇತರ ಜ್ಞಾನಶಿಸ್ತುಗಳೊಟ್ಟಿಗೆ ಹೊಂದಿರುವ ಅಂತರ್‌ಸಂಬಂಧವನ್ನು ಪರಿಚಯಿಸುವುದು.</li>
+        <li data-i18n="about_v4">ಭಾರತೀಯ ಹಾಗೂ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯಗಳಲ್ಲಿ ಕಂಡುಬರುವ ಹೊಸ ಪರಿಕಲ್ಪನೆಗಳು, ಶೈಲಿ–ರೂಪಗಳು, ನೋಟ–ಧೋರಣೆಗಳನ್ನು ಪರಿಚಯಿಸುವುದು.</li>
+        <li data-i18n="about_v5">ಅಂಚಿಗೆ ತಳ್ಳಲ್ಪಟ್ಟವರ ಕಥಾನಕಗಳನ್ನು ಮುನ್ನೆಲೆಗೆ ತರುವುದು.</li>
+        <li data-i18n="about_v6">ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು.</li>
+      </ul>
+      <div class="about-note" style="margin-top:10px;color:var(--sp-brown-600);">
+        <strong data-i18n="about_freq_now">ಸೂಚನೆ:</strong>
+        <span data-i18n="about_freq_text">ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆ ಮಾಸಿಕವಾಗಿ ಪ್ರಕಟವಾಗುತ್ತದೆ.</span>
       </div>
     </section>
 
-    <!-- EDITORIAL BOARD LINK -->
+    <!-- SUBMISSION RULES -->
     <section class="about-card">
-      <h2 data-i18n="about_board_h">ಸಂಪಾದಕ ಮಂಡಳಿ</h2>
-      <p data-i18n="about_board_p">
-        ನಮ್ಮ ಸಂಪಾದಕ ಮಂಡಳಿಯಲ್ಲಿ ಕನ್ನಡ ಅಧ್ಯಯನ ಕ್ಷೇತ್ರದ ಖ್ಯಾತ ಪಂಡಿತರಿದ್ದಾರೆ. ಪ್ರಕಟಿತ ಲೇಖನಗಳ ಗುಣಮಟ್ಟ ಮತ್ತು ನೈತಿಕತೆ ಕಾಪಾಡುವುದರಲ್ಲಿ ಅವರು ಬದ್ಧರಾಗಿದ್ದಾರೆ.
-      </p>
-      <div class="about-actions">
-        <a class="sp-btn" href="/editorial-board.html" data-i18n="about_btn_board">ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ</a>
-      </div>
-    </section>
+      <h2 data-i18n="about_rules_h">ಸಂಶೋಧನ ಪ್ರಬಂಧಗಳನ್ನು ಕಳಿಸುವಾಗ ಅನುಸರಿಸಬೇಕಾದ ನಿಯಮಗಳು</h2>
+      <ul class="about-list">
+        <li data-i18n="about_r1">ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಬರೆಯಬಹುದು.</li>
+        <li data-i18n="about_r2">ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.</li>
+        <li data-i18n="about_r3">ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.</li>
+        <li data-i18n="about_r4">ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.</li>
+        <li data-i18n="about_r5">ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿದ್ದು ISSN ಹೊಂದಿರುತ್ತದೆ.</li>
+        <li data-i18n="about_r6">ನಿಗದಿತ ಕಾಲಾವಧಿಯಲ್ಲಿ ಮಾತ್ರ ಲೇಖನಗಳನ್ನು ಕಳುಹಿಸಬೇಕು; ನಂತರ ಬಂದ ಲೇಖನಗಳನ್ನು ಸ್ವೀಕರಿಸಲಾಗುವುದಿಲ್ಲ.</li>
+        <li data-i18n="about_r7">ಲೇಖನ ಪ್ರಕಟಣೆಗೆ ಯಾವುದೇ ಶುಲ್ಕವಿಲ್ಲ.</li>
+        <li data-i18n="about_r8">ಸಾರಲೇಖ (Abstract), ಮುಖ್ಯ ಪದಗಳು (Keywords), ಅಡಿಟಿಪ್ಪಣಿಗಳು ಮತ್ತು ಪರಾಮರ್ಶನ ಗ್ರಂಥಗಳು ಕಡ್ಡಾಯ.</li>
+        <li data-i18n="about_r9">ಕಾಗುಣಿತ ದೋಷಗಳಿರಬಾರದು.</li>
+        <li data-i18n="about_r10">ಪ್ರಬಂಧದ ಲೇಖಕರ ಪೂರ್ಣ ವಿಳಾಸ, ಇಮೇಲ್ ಹಾಗೂ ದೂರವಾಣಿ ಸಂಖ್ಯೆ ಕಡ್ಡಾಯವಾಗಿ ನಮೂದಿಸಿರಬೇಕು.</li>
+        <li data-i18n="about_r11">ಲೇಖನ ಪ್ರಕಟಣೆ ಪರಿಶೀಲನಾ ಸಮಿತಿಯ ಆಯ್ಕೆಗೆ ಒಳಪಡುತ್ತದೆ; ಅತ್ಯುತ್ತಮ ಲೇಖನಗಳನ್ನು ಮಾತ್ರ ಆಯ್ಕೆ ಮಾಡಲಾಗುತ್ತದೆ.</li>
+        <li data-i18n="about_r12">ಸಂಶೋಧನಾ ಶಿಸ್ತಿನ ನಿಯಮಾವಳಿಗಳಿಗೆ ಅನುಗುಣವಾಗಿರಬೇಕು.</li>
+      </ul>
 
-    <!-- CONTACT -->
-    <section class="about-card">
-      <h2 data-i18n="about_contact_h">ಸಂಪರ್ಕ</h2>
-      <div class="about-contact">
-        <div class="about-contact__item">
-          <strong data-i18n="label_email">ಇಮೇಲ್</strong>
-          <a href="mailto:info@journalofkannada.com">info@journalofkannada.com</a>
-        </div>
-        <div class="about-contact__item">
-          <strong data-i18n="label_phone">ಫೋನ್</strong>
-          <span>+91 123 456 7890</span>
-        </div>
-        <div class="about-contact__item">
-          <strong data-i18n="label_address">ವಿಳಾಸ</strong>
-          <address>123 Kannada Journal Road, Bengaluru, India</address>
-        </div>
+      <div class="about-actions" style="margin-top:10px;display:flex;gap:10px;flex-wrap:wrap;">
+        <a class="sp-btn" href="mailto:kumara@claretcollege.edu.in" data-i18n="about_submit_email_btn">ಇ-ಮೇಲ್ ಮೂಲಕ ಕಳುಹಿಸಿ</a>
+        <span class="about-contact-note" style="align-self:center;color:var(--sp-brown-600);" data-i18n="about_submit_email_note">
+          ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: kumara@claretcollege.edu.in
+        </span>
       </div>
     </section>
 
@@ -106,9 +92,9 @@
           <span data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</span>
           <em data-i18n="about_submit">ಸಲ್ಲಿಸಿ</em>
         </a>
-        <a class="about-link" href="/contact.html">
-          <span data-i18n="nav_contact">ಸಂಪರ್ಕಿಸಿ</span>
-          <em data-i18n="about_get_in_touch">ಸಂಪರ್ಕ</em>
+        <a class="about-link" href="/editorial-board.html">
+          <span data-i18n="about_btn_board">ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ</span>
+          <em data-i18n="about_meet_board">ಪರಿಚಯ</em>
         </a>
       </div>
     </section>
