--- a/guidelines.html
+++ b/guidelines.html
@@ -32,7 +32,7 @@
       </div>
 
       <div class="sg-cta">
-        <a href="mailto:submissions@journalofkannada.com" class="sp-btn" data-i18n="sg_btn_submit">ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ</a>
+        <a href="mailto:kumara@claretcollege.edu.in" class="sp-btn" data-i18n="sg_btn_submit">ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ</a>
         <a href="/archive.html" class="sp-btn ghost" data-i18n="sg_btn_archive">ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ</a>
       </div>
     </header>
@@ -124,7 +124,7 @@
         ನಿಮ್ಮ ಲೇಖನವನ್ನು Word ರೂಪದಲ್ಲಿ (ಮತ್ತು PDF, ಐಚ್ಚಿಕ) ಅಟ್ಯಾಚ್ ಮಾಡಿ, ಕೆಳಗಿನ ಇಮೇಲ್ ಗೆ ಕಳುಹಿಸಿ. ವಿಷಯ (Subject): “Article Submission – SP”.
       </p>
       <div class="sg-contact">
-        <a class="sp-btn" href="mailto:submissions@journalofkannada.com" data-i18n="sg_btn_email">submissions@journalofkannada.com</a>
+        <a class="sp-btn" href="mailto:kumara@claretcollege.edu.in" data-i18n="sg_btn_email">kumara@claretcollege.edu.in</a>
         <span class="note" data-i18n="sg_submit_note">ಪ್ರಶ್ನೆಗಳು/ಸ್ಪಷ್ಟೀಕರಣಗಳಿಗೂ ಇದೇ ಇಮೇಲ್.</span>
       </div>
     </section>
