MOdified for the new issue

--- a/about.html
+++ b/about.html
@@ -46,11 +46,11 @@
         <li data-i18n="about_v3">ಸಾಹಿತ್ಯವು ಇತರ ಜ್ಞಾನಶಿಸ್ತುಗಳೊಟ್ಟಿಗೆ ಹೊಂದಿರುವ ಅಂತರ್‌ಸಂಬಂಧವನ್ನು ಪರಿಚಯಿಸುವುದು.</li>
         <li data-i18n="about_v4">ಭಾರತೀಯ ಹಾಗೂ ಪಾಶ್ಚಾತ್ಯ ಸಾಹಿತ್ಯಗಳಲ್ಲಿ ಕಂಡುಬರುವ ಹೊಸ ಪರಿಕಲ್ಪನೆಗಳು, ಶೈಲಿ–ರೂಪಗಳು, ನೋಟ–ಧೋರಣೆಗಳನ್ನು ಪರಿಚಯಿಸುವುದು.</li>
         <li data-i18n="about_v5">ಅಂಚಿಗೆ ತಳ್ಳಲ್ಪಟ್ಟವರ ಕಥಾನಕಗಳನ್ನು ಮುನ್ನೆಲೆಗೆ ತರುವುದು.</li>
-        <li data-i18n="about_v6">ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು.</li>
+        <li data-i18n="about_v6">ಕನ್ನಡ ಸಾಹಿತ್ಯ ಮತ್ತು ಸಂಸ್ಕೃತಿಯ ಮೇಲೆ ರಾಜಕೀಯ, ಆರ್ಥಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ತಾತ್ವಿಕ ಪ್ರಭಾವಗಳನ್ನು ಪರಿಶೀಲಿಸುವುದು. ಮೊದಲಾದ ಆಶಯಗಳನ್ನು ಸಾಹಿತ್ಯ ಪ್ರಸ್ತಾನ ಪತ್ರಿಕೆಯು ಹೊಂದಿರುತ್ತದೆ.</li>
       </ul>
       <div class="about-note" style="margin-top:10px;color:var(--sp-brown-600);">
         <strong data-i18n="about_freq_now">ಸೂಚನೆ:</strong>
-        <span data-i18n="about_freq_text">ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆ ಮಾಸಿಕವಾಗಿ ಪ್ರಕಟವಾಗುತ್ತದೆ.</span>
+        <span data-i18n="about_freq_text">ಪ್ರಸ್ತುತ ಈ ನಿಯತಕಾಲಿಕೆಯು ಮಾಸಿಕದ್ದಾಗಿರುತ್ತದೆ.</span>
       </div>
     </section>
 
