Corrected pdf button color

--- a/about.html
+++ b/about.html
@@ -26,9 +26,9 @@
       </p>
 
       <div class="about-chips">
-        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_monthly">ಮಾಸಿಕ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_monthly">ದ್ವೈಮಾಸಿಕ</span></span>
         <span class="chip"><span class="dot"></span><span data-i18n="about_chip_scope">ಬಹುಶಿಸ್ತೀಯ</span></span>
-        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_review_issn">ಪಿಯರ್-ರಿವ್ಯೂಡ್ • ISSN</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="about_chip_review_issn">ಪಿಯರ್-ರಿವ್ಯೂಡ್</span></span>
       </div>
 
       <div class="about-cta">
@@ -62,7 +62,7 @@
         <li data-i18n="about_r2">ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.</li>
         <li data-i18n="about_r3">ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.</li>
         <li data-i18n="about_r4">ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.</li>
-        <li data-i18n="about_r5">ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿದ್ದು ISSN ಹೊಂದಿರುತ್ತದೆ.</li>
+        <li data-i18n="about_r5">ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿರುತ್ತದೆ.</li>
         <li data-i18n="about_r6">ನಿಗದಿತ ಕಾಲಾವಧಿಯಲ್ಲಿ ಮಾತ್ರ ಲೇಖನಗಳನ್ನು ಕಳುಹಿಸಬೇಕು; ನಂತರ ಬಂದ ಲೇಖನಗಳನ್ನು ಸ್ವೀಕರಿಸಲಾಗುವುದಿಲ್ಲ.</li>
         <li data-i18n="about_r7">ಲೇಖನ ಪ್ರಕಟಣೆಗೆ ಯಾವುದೇ ಶುಲ್ಕವಿಲ್ಲ.</li>
         <li data-i18n="about_r8">ಸಾರಲೇಖ (Abstract), ಮುಖ್ಯ ಪದಗಳು (Keywords), ಅಡಿಟಿಪ್ಪಣಿಗಳು ಮತ್ತು ಪರಾಮರ್ಶನ ಗ್ರಂಥಗಳು ಕಡ್ಡಾಯ.</li>
@@ -73,9 +73,9 @@
       </ul>
 
       <div class="about-actions" style="margin-top:10px;display:flex;gap:10px;flex-wrap:wrap;">
-        <a class="sp-btn" href="mailto:kumara@claretcollege.edu.in" data-i18n="about_submit_email_btn">ಇ-ಮೇಲ್ ಮೂಲಕ ಕಳುಹಿಸಿ</a>
+        <a class="sp-btn" href="mailto:sahityaprasthana@gmail.com" data-i18n="about_submit_email_btn">ಇ-ಮೇಲ್ ಮೂಲಕ ಕಳುಹಿಸಿ</a>
         <span class="about-contact-note" style="align-self:center;color:var(--sp-brown-600);" data-i18n="about_submit_email_note">
-          ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: kumara@claretcollege.edu.in
+          ನೀವು ಕಳುಹಿಸಬೇಕಾದ ಇ-ಮೇಲ್ ವಿಳಾಸ: sahityaprasthana@gmail.com
         </span>
       </div>
     </section>
@@ -86,15 +86,15 @@
       <div class="about-links">
         <a class="about-link" href="/archive.html">
           <span data-i18n="nav_archive">ಲೇಖನ ಸಂಗ್ರಹ</span>
-          <em data-i18n="about_explore">ಅನ್ವೇಷಿಸಿ</em>
+          <!-- <em data-i18n="about_explore">ಅನ್ವೇಷಿಸಿ</em> -->
         </a>
         <a class="about-link" href="/guidelines.html">
           <span data-i18n="nav_submit">ಸಲ್ಲಿಕೆ ಮಾರ್ಗಸೂಚಿ</span>
-          <em data-i18n="about_submit">ಸಲ್ಲಿಸಿ</em>
+          <!-- <em data-i18n="about_submit">ಸಲ್ಲಿಸಿ</em> -->
         </a>
         <a class="about-link" href="/editorial-board.html">
           <span data-i18n="about_btn_board">ಸಂಪಾದಕ ಮಂಡಳಿ ವೀಕ್ಷಿಸಿ</span>
-          <em data-i18n="about_meet_board">ಪರಿಚಯ</em>
+          <!-- <em data-i18n="about_meet_board">ಪರಿಚಯ</em> -->
         </a>
       </div>
     </section>
