--- a/editorial-board.html
+++ b/editorial-board.html
@@ -87,11 +87,11 @@
         </p>
       </div>
 
-      <div class="board-member">
+      <!-- <div class="board-member">
         <h3 data-i18n="eb_m_4_name">ಡಾ. ರಂಗನಾಥ ಕುಂಟನಕುಂಟೆ</h3>
         <p data-i18n="eb_m_4_affil">ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕರು, ಸರ್ಕಾರಿ ಪ್ರಥಮ ದರ್ಜೆ ಕಾಲೇಜು, ಹುಬ್ಬಳ್ಳಿ.</p>
         <p><span data-i18n="label_phone">ಮೋ:</span> 9591001646</p>
-      </div>
+      </div> -->
 
       <div class="board-member">
         <h3 data-i18n="eb_m_5_name">ಡಾ. ಪಿ. ಭಾರತಿದೇವಿ</h3>
@@ -124,12 +124,12 @@
           <a href="mailto:premajyothid21@gmail.com">premajyothid21@gmail.com</a>
         </p>
       </div>
-
+<!-- 
       <div class="board-member">
         <h3 data-i18n="eb_m_10_name">ಡಾ. ಸಫೀರ್ ಪಾಷಾ</h3>
         <p data-i18n="eb_m_10_affil">ಸಹ ಪ್ರಾಧ್ಯಾಪಕರು, ವಾಣಿಜ್ಯ ಶಾಸ್ತ್ರ ವಿಭಾಗ, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಬೆಂಗಳೂರು.</p>
         <p><span data-i18n="label_phone">ಮೋ:</span> 9008140185</p>
-      </div>
+      </div> -->
 
       <div class="board-member">
         <h3 data-i18n="eb_m_11_name">ಡಾ. ಎಚ್. ಲಕ್ಷ್ಮೀನಾರಾಯಣಸ್ವಾಮಿ</h3>
@@ -197,11 +197,11 @@
         </p>
       </div>
 
-      <div class="board-member">
+      <!-- <div class="board-member">
         <h3 data-i18n="eb_adv_3_name">ಡಾ. ಜೋಸಫ್ ಎಸ್.</h3>
         <p data-i18n="eb_adv_3_affil">ಸಹ ಪ್ರಾಧ್ಯಾಪಕರು ಹಾಗೂ ಉಪ ಪ್ರಾಂಶುಪಾಲರು, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಜಾಲಹಳ್ಳಿ, ಬೆಂಗಳೂರು.</p>
         <p><span data-i18n="label_phone">ಮೋ:</span> 6363768955</p>
-      </div>
+      </div> -->
     </section>
 
     <!-- ========== Legal Advisor ========== -->
