--- a/guidelines.html
+++ b/guidelines.html
@@ -27,12 +27,12 @@
 
       <div class="sg-chips">
         <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_freq">ದ್ವೈಮಾಸಿಕ</span></span>
-        <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_scope">ಬಹುಶಿಸ್ತೀಯ ಕಣಜ</span></span>
+        <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_scope">ಬಹುಶಿಸ್ತೀಯ</span></span>
         <span class="chip"><span class="dot"></span><span data-i18n="sg_chip_review">ಡಬಲ್-ಬ್ಲೈಂಡ್ ಪಿಯರ್-ರಿವ್ಯೂ</span></span>
       </div>
 
       <div class="sg-cta">
-        <a href="mailto:kumara@claretcollege.edu.in" class="sp-btn" data-i18n="sg_btn_submit">ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ</a>
+        <a href="mailto:sahityaprasthana@gmail.com" class="sp-btn" data-i18n="sg_btn_submit">ಇಮೇಲ್ ಮೂಲಕ ಸಲ್ಲಿಸಿ</a>
         <a href="/archive.html" class="sp-btn ghost" data-i18n="sg_btn_archive">ಆರ್ಕೈವ್ ವೀಕ್ಷಿಸಿ</a>
       </div>
     </header>
@@ -124,7 +124,7 @@
         ನಿಮ್ಮ ಲೇಖನವನ್ನು Word ರೂಪದಲ್ಲಿ (ಮತ್ತು PDF, ಐಚ್ಚಿಕ) ಅಟ್ಯಾಚ್ ಮಾಡಿ, ಕೆಳಗಿನ ಇಮೇಲ್ ಗೆ ಕಳುಹಿಸಿ. ವಿಷಯ (Subject): “Article Submission – SP”.
       </p>
       <div class="sg-contact">
-        <a class="sp-btn" href="mailto:kumara@claretcollege.edu.in" data-i18n="sg_btn_email">kumara@claretcollege.edu.in</a>
+        <a class="sp-btn" href="mailto:sahityaprasthana@gmail.com" data-i18n="sg_btn_email">sahityaprasthana@gmail.com</a>
         <span class="note" data-i18n="sg_submit_note">ಪ್ರಶ್ನೆಗಳು/ಸ್ಪಷ್ಟೀಕರಣಗಳಿಗೂ ಇದೇ ಇಮೇಲ್.</span>
       </div>
     </section>
