--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <section class="sp-home__hero">
     <div class="sp-home__hero-inner">
       <h2 class="sp-home__title" data-i18n="feat_title">ವಿಶೇಷ ಲೇಖನಗಳು</h2>
-      <p class="sp-home__subtitle" data-i18n="feat_desc">
+      <!-- <p class="sp-home__subtitle" data-i18n="feat_desc">
         ಕನ್ನಡ ಅಧ್ಯಯನಗಳ ನಮ್ಮ ಇತ್ತೀಚಿನ ಪ್ರಕಟಣೆಗಳನ್ನು ಅನ್ವೇಷಿಸಿ.
-      </p>
+      </p> -->
       <div class="sp-home__cta">
         <a href="/archive.html" class="sp-btn" data-i18n="feat_cta">ಎಲ್ಲಾ ಲೇಖನಗಳನ್ನು ವೀಕ್ಷಿಸಿ</a>
       </div>
