--- a/contact.html
+++ b/contact.html
@@ -21,42 +21,49 @@
     <h1 class="contact-title" data-i18n="contact_title">Contact Us</h1>
     <p class="contact-subtitle" data-i18n="contact_subtitle">We'd love to hear from you! Reach out to us via the following:</p>
 
-    <div class="contact-card-grid">
-      <!-- Email Card -->
-      <div class="contact-card">
-        <div class="contact-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <!-- Single Combined Card -->
+    <div class="contact-card-single">
+      <!-- Email -->
+      <div class="contact-item">
+        <div class="contact-icon-small">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
             <polyline points="22,6 12,13 2,6"></polyline>
           </svg>
         </div>
-        <h3 data-i18n="contact_email_label">Email</h3>
-        <a href="mailto:sahityaprasthana@gmail.com">sahityaprasthana@gmail.com</a>
+        <div class="contact-info">
+          <h3 data-i18n="contact_email_label">Email</h3>
+          <a href="mailto:sahityaprasthana@gmail.com">sahityaprasthana@gmail.com</a>
+        </div>
       </div>
 
-      <!-- Phone Card -->
-      <div class="contact-card">
-        <div class="contact-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <!-- Phone -->
+      <div class="contact-item">
+        <div class="contact-icon-small">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z"></path>
           </svg>
         </div>
-        <h3 data-i18n="contact_phone_label">Phone</h3>
-        <a href="tel:+919980065181">+91 9980065181</a>
+        <div class="contact-info">
+          <h3 data-i18n="contact_phone_label">Phone</h3>
+          <a href="tel:+919980065181">+91 9980065181</a>
+        </div>
       </div>
 
-      <!-- Address Card -->
-      <div class="contact-card contact-card-full">
-        <div class="contact-icon">
-          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <!-- Address -->
+      <div class="contact-item">
+        <div class="contact-icon-small">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"></path>
             <circle cx="12" cy="10" r="3"></circle>
           </svg>
         </div>
-        <h3 data-i18n="contact_address_label">Address</h3>
-        <p>#88, 89, 3rd main, 11th cross<br>
-        Jnanaganga Nagara, Jnanabharathi post<br>
-        Bangalore</p>
+        <div class="contact-info">
+          <h3 data-i18n="contact_address_label">Address</h3>
+          <p>#88, 89, 3rd main, 11th cross<br>
+          Jnanaganga Nagara, Jnanabharathi post<br>
+          Bangalore</p>
+        </div>
       </div>
     </div>
   </main>
