Corrected pdf button color

--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,7 @@
         </div>
         <div class="contact-info">
           <h3 data-i18n="contact_address_label">Address</h3>
-          <p>#88, 89, 3rd main, 11th cross<br>
-          Jnanaganga Nagara, Jnanabharathi post<br>
-          Bangalore</p>
+          <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru</p>
         </div>
       </div>
     </div>
