--- a/about.html
+++ b/about.html
@@ -58,8 +58,8 @@
     <section class="about-card">
       <h2 data-i18n="about_rules_h">ಸಂಶೋಧನ ಪ್ರಬಂಧಗಳನ್ನು ಕಳಿಸುವಾಗ ಅನುಸರಿಸಬೇಕಾದ ನಿಯಮಗಳು</h2>
       <ul class="about-list">
-        <li data-i18n="about_r1">ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಬರೆಯಬಹುದು.</li>
-        <li data-i18n="about_r2">ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬಹುದು.</li>
+        <li data-i18n="about_r1">ತಮ್ಮ ಬರಹಗಳು ಕನ್ನಡ ಮತ್ತು ಇಂಗ್ಲೀಷ್ ಎರಡೂ ಭಾಷೆಯಲ್ಲಿ ಇರಬಹುದು.</li>
+        <li data-i18n="about_r2">ಲೇಖನಗಳು ಬಹುಶಿಸ್ತೀಯ ಆಯಾಮವನ್ನು ಹೊಂದಿರಬೇಕು.</li>
         <li data-i18n="about_r3">ಲೇಖನವು ೧೫೦೦ ರಿಂದ ೨೦೦೦ ಪದಗಳ ಮಿತಿಯಲ್ಲಿರಬೇಕು.</li>
         <li data-i18n="about_r4">ನುಡಿ 01E/ಯುನಿಕೋಡ್ ನುಡಿ 01E; ಅಕ್ಷರ ಗಾತ್ರ 14; ವಾಕ್ಯ ಮಧ್ಯದ ಅಂತರ 1.5 ಇರಬೇಕು.</li>
         <li data-i18n="about_r5">ಪತ್ರಿಕೆ ಪೀರ್ ರಿವ್ಯೂಡ್ ಆಗಿರುತ್ತದೆ.</li>
