--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
         </div>
         <div class="contact-info">
           <h3 data-i18n="contact_address_label">Address</h3>
-          <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru</p>
+          <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru - 560056</p>
         </div>
       </div>
     </div>
