--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,21 @@
         </div>
         <div class="contact-info">
           <h3 data-i18n="contact_address_label">Address</h3>
-          <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru - 560056</p>
+          <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru - 560056</p>
+        </div>
+      </div>
+
+      <!-- Publisher -->
+      <div class="contact-item">
+        <div class="contact-icon-small">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+          </svg>
+        </div>
+        <div class="contact-info">
+          <h3 data-i18n="contact_publisher_label">Publisher</h3>
+          <p>SAHITHYA SAMBHRAMA PRAKASHANA</p>
         </div>
       </div>
     </div>
