Added the chief editor and page numbers

--- a/contact.html
+++ b/contact.html
@@ -21,8 +21,8 @@
     <h1 class="contact-title" data-i18n="contact_title">Contact Us</h1>
     <p class="contact-subtitle" data-i18n="contact_subtitle">We'd love to hear from you! Reach out to us via the following:</p>
 
-    <!-- Single Combined Card -->
-    <div class="contact-card-single">
+    <!-- Top Contact Info (outside card) -->
+    <div class="contact-top-info">
       <!-- Email -->
       <div class="contact-item">
         <div class="contact-icon-small">
@@ -63,19 +63,46 @@
           <p>88,89 Amulya residency, 11th Cross Road, Jnanaganga Nagara, Jnanabharathi, Bengaluru - 560056</p>
         </div>
       </div>
+    </div>
 
-      <!-- Publisher -->
-      <div class="contact-item">
-        <div class="contact-icon-small">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
-            <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
-          </svg>
+    <!-- Bottom Card: Publisher and Chief Editor -->
+    <div class="contact-card-single">
+      <div class="contact-bottom">
+
+        <!-- Publisher Block -->
+        <div class="contact-block contact-publisher">
+          <div class="contact-item">
+            <div class="contact-icon-small">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"></path>
+                <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"></path>
+              </svg>
+            </div>
+            <div class="contact-info">
+              <h3 data-i18n="contact_publisher_label">Publisher</h3>
+              <p>SAHITHYA SAMBHRAMA PRAKASHANA</p>
+            </div>
+          </div>
         </div>
-        <div class="contact-info">
-          <h3 data-i18n="contact_publisher_label">Publisher</h3>
-          <p>SAHITHYA SAMBHRAMA PRAKASHANA</p>
+
+        <!-- Chief Editor Block -->
+        <div class="contact-block contact-editor">
+          <div class="contact-item">
+            <div class="contact-icon-small">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                <circle cx="12" cy="7" r="4"></circle>
+              </svg>
+            </div>
+            <div class="contact-info">
+              <h3 data-i18n="contact_chief_editor_label">Chief Editor</h3>
+              <p class="editor-name" data-i18n="eb_editor_name">Dr. Kumar Indrabetta</p>
+              <p class="editor-phone"><span data-i18n="label_phone">Ph:</span> <a href="tel:+918073011714">8073011714</a></p>
+              <p class="editor-email"><a href="mailto:kumara@claretcollege.edu.in">kumara@claretcollege.edu.in</a></p>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
   </main>
