Added chief editor address

--- a/contact.html
+++ b/contact.html
@@ -97,6 +97,7 @@
             <div class="contact-info">
               <h3 data-i18n="contact_chief_editor_label">Chief Editor</h3>
               <p class="editor-name" data-i18n="eb_editor_name">Dr. Kumar Indrabetta</p>
+              <p class="editor-affil" data-i18n="eb_editor_affil">Assistant Professor, St. Claret College, Jalahalli, Bengaluru - 560013.</p>
               <p class="editor-phone"><span data-i18n="label_phone">Ph:</span> <a href="tel:+918073011714">8073011714</a></p>
               <p class="editor-email"><a href="mailto:kumara@claretcollege.edu.in">kumara@claretcollege.edu.in</a></p>
             </div>
