--- a/editorial-board.html
+++ b/editorial-board.html
@@ -25,11 +25,11 @@
   <main class="board-main sp-container">
     <!-- ========== Editor ========== -->
     <section class="board-section">
-      <h2 data-i18n="eb_sec_editor">ಸಂಪಾದಕರು</h2>
+      <h2 data-i18n="eb_sec_editor">ಮುಖ್ಯ ಸಂಪಾದಕರು</h2>
 
       <div class="board-member">
         <h3 data-i18n="eb_editor_name">ಡಾ. ಕುಮಾರ ಇಂದ್ರಬೆಟ್ಟ</h3>
-        <p data-i18n="eb_editor_affil">ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕರು, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಜಾಲಹಳ್ಳಿ, ಬೆಂಗಳೂರು.</p>
+        <p data-i18n="eb_editor_affil">ಸಹಾಯಕ ಪ್ರಾಧ್ಯಾಪಕರು, ಸೈಂಟ್ ಕ್ಲಾರೇಟ್ ಕಾಲೇಜು, ಜಾಲಹಳ್ಳಿ, ಬೆಂಗಳೂರು - 560013.</p>
         <p>
           <span data-i18n="label_phone">ಮೋ:</span> 8073011714<br>
           <a href="mailto:kumara@claretcollege.edu.in">kumara@claretcollege.edu.in</a>
